[[bin]]
name = "hl21"
path = "src/main.rs"

[package]
name = "hl21"
version = "0.1.0"
authors = ["bobretsov <s.bobretsov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.1.0"
url = "2.2.1"
serde = "1.0.123"
serde_json = "1.0.64"
rand = "0.8.3"
openssl = { version = "0.10", features = ["vendored"] }
governor = "0.3.2"
async-recursion = "0.3.2"
num-integer = "0.1.44"
envconfig = "0.9.1"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

